Bug 332074, [BEOS]Fix XPCOMGlue for BeOS, p=sergei_d, r=thesuckiestemail, r=bsmedberg